update generated code for new api spec
